tests/paczka1/small_fuzzy/44890095.err
Error in line 11: mF3HSQs7 A827 4,5
Error in line 10: ReDtvHTrE43 S975 93,5
